<resources>
    <string name="app_name">Stores</string>
    <string name="description_img_photo">imagen de la tienda</string>
    <string name="store_add">Store add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Store name</string>
    <string name="required">Required</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_website">Website url</string>
    <string name="hint_photo_url">Photo url</string>
    <string name="edit_store_title_fragment">Create store</string>
    <string name="menu_save">Save</string>
    <string name="store_added_succes">Store added successfully</string>
    <string name="id">key_id</string>
    <string name="edit_update_title_fragment">Store updated</string>
    <string name="edit_update_store_title_fragment">Update Store</string>
    <string name="accept">Delete</string>
    <string name="decline">Cancel</string>
    <string name="delete_store">Do you want to delete store?</string>
    <string name="dialogTitle">What would you like to do?</string>
</resources>